example/secondfile/objects/Case.object
<CustomObject>
    <fields>
        <fullName>ATT_Trouble_Ticket_Number__c</fullName>
        <description>Service Assurance</description>
        <label>AT&amp;T Trouble Ticket Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Speed__c</fullName>
        <label>Access Speed</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Access_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>T1</fullName>
                </value>
                <value>
                    <fullName>2xT1</fullName>
                </value>
                <value>
                    <fullName>3xT1</fullName>
                </value>
                <value>
                    <fullName>4xT1</fullName>
                </value>
                <value>
                    <fullName>5xT1</fullName>
                </value>
                <value>
                    <fullName>6xT1</fullName>
                </value>
                <value>
                    <fullName>7xT1</fullName>
                </value>
                <value>
                    <fullName>8xT1</fullName>
                </value>
                <value>
                    <fullName>5 Mbps</fullName>
                </value>
                <value>
                    <fullName>10 Mbps</fullName>
                </value>
                <value>
                    <fullName>20 Mbps</fullName>
                </value>
                <value>
                    <fullName>50 Mbps</fullName>
                </value>
                <value>
                    <fullName>100 Mbps</fullName>
                </value>
                <value>
                    <fullName>250 Mbps</fullName>
                </value>
                <value>
                    <fullName>500 Mbps</fullName>
                </value>
                <value>
                    <fullName>600 Mbps</fullName>
                </value>
                <value>
                    <fullName>1 Gbps</fullName>
                </value>
                <value>
                    <fullName>10 Gbps</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Access_Type__c</fullName>
        <label>Access Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ethernet</fullName>
                </value>
                <value>
                    <fullName>T1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Billing</description>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_SP_Technical_Contact_Email__c</fullName>
        <description>Service Assurance</description>
        <label>Alternate SP Technical Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alternate_SP_Technical_Contact_Name__c</fullName>
        <description>Service Assurance</description>
        <label>Alternate SP Technical Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_SP_Technical_Contact_Phone__c</fullName>
        <description>Service Assurance</description>
        <label>Alternate SP Technical Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Asset_ID__c</fullName>
        <description>Service Assurance</description>
        <label>Asset ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <description>Service Assurance</description>
        <label>Asset Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Circuit ID</fullName>
                </value>
                <value>
                    <fullName>IP Address</fullName>
                </value>
                <value>
                    <fullName>Router Host Name</fullName>
                </value>
                <value>
                    <fullName>Telephone Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Authorized_Contact_Email_Address__c</fullName>
        <description>Service Delivery</description>
        <label>Authorized Contact Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Authorized_Contact_Name__c</fullName>
        <description>Service Delivery</description>
        <label>Authorized Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Contact_Phone_Number__c</fullName>
        <description>Service Delivery</description>
        <label>Authorized Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Number_BAN__c</fullName>
        <description>Billing</description>
        <label>Billing Account Number (BAN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Age_In_Business_Hours__c</fullName>
        <description>The total case age in business hours from open to close.</description>
        <inlineHelpText>The total case age in business hours from open to close.</inlineHelpText>
        <label>Case Age In Business Hours</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Topic__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cancellation &amp; Disconnects</fullName>
                </value>
                <value>
                    <fullName>Disputes</fullName>
                </value>
                <value>
                    <fullName>Escalations</fullName>
                </value>
                <value>
                    <fullName>General Billing Questions</fullName>
                </value>
                <value>
                    <fullName>General Technical Information</fullName>
                </value>
                <value>
                    <fullName>Informational Requests</fullName>
                </value>
                <value>
                    <fullName>LOA/CFA Request</fullName>
                </value>
                <value>
                    <fullName>Order Status</fullName>
                </value>
                <value>
                    <fullName>RDS</fullName>
                </value>
                <value>
                    <fullName>Taxes and Exemptions</fullName>
                </value>
                <value>
                    <fullName>Trouble Ticket Creation</fullName>
                </value>
                <value>
                    <fullName>Trouble Ticket Escalation</fullName>
                </value>
                <value>
                    <fullName>TTU</fullName>
                </value>
                <value>
                    <fullName>Partner Exchange Portal</fullName>
                </value>
                <value>
                    <fullName>Business Direct</fullName>
                </value>
                <value>
                    <fullName>Mobility Platforms</fullName>
                </value>
                <value>
                    <fullName>MACD</fullName>
                </value>
                <value>
                    <fullName>Manual RDS</fullName>
                </value>
                <value>
                    <fullName>TTU Letter</fullName>
                </value>
                <value>
                    <fullName>CNR Notice</fullName>
                </value>
                <value>
                    <fullName>Contract Renewal</fullName>
                </value>
                <value>
                    <fullName>Mobility Requests</fullName>
                </value>
                <value>
                    <fullName>An API does not work</fullName>
                </value>
                <value>
                    <fullName>Credentials Issue</fullName>
                </value>
                <value>
                    <fullName>SSL Certificate Issue</fullName>
                </value>
                <value>
                    <fullName>General Questions</fullName>
                </value>
                <value>
                    <fullName>Portal Discrepancies</fullName>
                </value>
                <value>
                    <fullName>MUBU</fullName>
                </value>
                <value>
                    <fullName>Mulesoft Platform</fullName>
                </value>
                <value>
                    <fullName>CSI Platform</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Circuit_IDs__c</fullName>
        <label>Circuit IDs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Conversation_ID__c</fullName>
        <label>Conversation ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Requested_Due_Date__c</fullName>
        <description>Service Delivery</description>
        <label>Customer Requested Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disputed_Amount__c</fullName>
        <description>Billing</description>
        <label>Disputed Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Customer_Company_Name__c</fullName>
        <description>Service Assurance</description>
        <label>End Customer Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Local_Contact_Name__c</fullName>
        <description>Service Assurance</description>
        <label>End Customer Local Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Local_Contact_Phone_Number__c</fullName>
        <description>Service Assurance</description>
        <label>End Customer Local Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>End_Customer_Site_Access_Hours_M_F__c</fullName>
        <description>Service Assurance</description>
        <label>End Customer Site Access Hours: M-F</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Site_Access_Hours_Sat_Sun__c</fullName>
        <description>Service Assurance</description>
        <label>End Customer Site Access Hours: Sat-Sun</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Federation_ID__c</fullName>
        <label>Federation ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMEI__c</fullName>
        <label>IMEI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Information_Request_Subject__c</fullName>
        <description>Service Assurance</description>
        <label>Information Request Subject</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Check Class of Service Profile</fullName>
                </value>
                <value>
                    <fullName>IP information</fullName>
                </value>
                <value>
                    <fullName>Number Portability</fullName>
                </value>
                <value>
                    <fullName>Site coverage/Microcell Qualification</fullName>
                </value>
                <value>
                    <fullName>Tier 1 Compliance Information</fullName>
                </value>
                <value>
                    <fullName>Utilization Reports</fullName>
                </value>
                <value>
                    <fullName>Voicemail Password Reset</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intrusive_Test_Authorization__c</fullName>
        <description>Service Assurance</description>
        <label>Intrusive Test Authorization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Authorized</fullName>
                </value>
                <value>
                    <fullName>Not Authorized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intrusive_Test_Window__c</fullName>
        <description>Service Assurance</description>
        <label>Intrusive Test Window</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Dates__c</fullName>
        <description>Billing</description>
        <label>Invoice Dates</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <description>Billing</description>
        <label>Invoice Number(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_there_live_traffic_on_this_circuit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For MACDs only</inlineHelpText>
        <label>Is there live traffic on this circuit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <description>Service Delivery</description>
        <label>Issue Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>SubCategory__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted Due Dates</fullName>
                </value>
                <value>
                    <fullName>Access Delivery Date</fullName>
                </value>
                <value>
                    <fullName>Activation</fullName>
                </value>
                <value>
                    <fullName>Address Validation</fullName>
                </value>
                <value>
                    <fullName>Add SP in Mubu</fullName>
                </value>
                <value>
                    <fullName>ADD VLAN</fullName>
                </value>
                <value>
                    <fullName>Approves API access in Mulesoft for API</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T SOW Invitation</fullName>
                </value>
                <value>
                    <fullName>BAN to BAN</fullName>
                </value>
                <value>
                    <fullName>Caller ID Change</fullName>
                </value>
                <value>
                    <fullName>Cancel / Resume Line(s)</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Change ASN Override/Number</fullName>
                </value>
                <value>
                    <fullName>Change CER/PER IPs</fullName>
                </value>
                <value>
                    <fullName>Change VLAN CIR</fullName>
                </value>
                <value>
                    <fullName>Change VLAN Tag ID</fullName>
                </value>
                <value>
                    <fullName>Circuit Test Dates</fullName>
                </value>
                <value>
                    <fullName>CLLI</fullName>
                </value>
                <value>
                    <fullName>Construction Questions</fullName>
                </value>
                <value>
                    <fullName>Contractual Credits</fullName>
                </value>
                <value>
                    <fullName>COS Change/Add/Remove</fullName>
                </value>
                <value>
                    <fullName>CSA</fullName>
                </value>
                <value>
                    <fullName>CTA</fullName>
                </value>
                <value>
                    <fullName>Demarc Information</fullName>
                </value>
                <value>
                    <fullName>Design Issue</fullName>
                </value>
                <value>
                    <fullName>Device / SIM Only Order</fullName>
                </value>
                <value>
                    <fullName>Disconnect</fullName>
                </value>
                <value>
                    <fullName>Documentation and Test cases sent to SP</fullName>
                </value>
                <value>
                    <fullName>Early Termination Fees</fullName>
                </value>
                <value>
                    <fullName>Enable Ticket</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Status_Change__c</fullName>
        <description>Stores the last time the status changed -- used by the Case Business Hours Tools package.</description>
        <label>Last Status Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LiveTraffic__c</fullName>
        <formula>IF(Is_there_live_traffic_on_this_circuit__c = True, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LiveTraffic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobility_Trouble_Type__c</fullName>
        <description>Service Assurance</description>
        <label>Mobility Trouble Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Voice</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Messaging</fullName>
                </value>
                <value>
                    <fullName>Voicemail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Circuit_IDs__c</fullName>
        <description>Billing</description>
        <label>Number of Circuit IDs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Disputed_Telephone_Numbers__c</fullName>
        <description>Billing</description>
        <label>Number of Disputed Telephone Numbers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Invoices__c</fullName>
        <label>Number of Invoices</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <label>Opportunity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number_CTN__c</fullName>
        <description>Service Assurance</description>
        <label>Impacted Phone Number/CTN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_Name__c</fullName>
        <description>Service Delivery</description>
        <label>Point of Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_Telephone_Number__c</fullName>
        <description>Service Delivery</description>
        <label>Point of Contact Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <description>Service Assurance</description>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>Wireline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Service Assurance</description>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AIA</fullName>
                </value>
                <value>
                    <fullName>ANIRA with AVPN</fullName>
                </value>
                <value>
                    <fullName>ANIRA with PNT</fullName>
                </value>
                <value>
                    <fullName>ASE</fullName>
                </value>
                <value>
                    <fullName>AVPN</fullName>
                </value>
                <value>
                    <fullName>IPFLEX</fullName>
                </value>
                <value>
                    <fullName>MIS/PNT</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>MPLS</fullName>
                </value>
                <value>
                    <fullName>NBFW</fullName>
                </value>
                <value>
                    <fullName>Wireline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Service Delivery Cancellation/Disconnect Reason</description>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bankrupcy</fullName>
                </value>
                <value>
                    <fullName>Closed Business</fullName>
                </value>
                <value>
                    <fullName>Contract Expiration</fullName>
                </value>
                <value>
                    <fullName>Moved to Another Carrier</fullName>
                </value>
                <value>
                    <fullName>Dissatisfaction</fullName>
                </value>
                <value>
                    <fullName>Disaster</fullName>
                </value>
                <value>
                    <fullName>Fraud</fullName>
                </value>
                <value>
                    <fullName>No Further Use</fullName>
                </value>
                <value>
                    <fullName>Non-Payment</fullName>
                </value>
                <value>
                    <fullName>Product Not Performing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reported_Username__c</fullName>
        <description>Service Access Issues</description>
        <inlineHelpText>The username provided at the time of trouble report.</inlineHelpText>
        <label>Reported Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Request_Type__c</fullName>
        <description>Service Assurance</description>
        <label>Resolution Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>Fault</fullName>
                </value>
                <value>
                    <fullName>Informational</fullName>
                </value>
                <value>
                    <fullName>MAC</fullName>
                </value>
                <value>
                    <fullName>System Access Issue</fullName>
                </value>
                <value>
                    <fullName>TTU Assist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution_Service_Line__c</fullName>
        <description>Service Assurance</description>
        <label>Resolution Service Line</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Resolution_Request_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APEX Portal</fullName>
                </value>
                <value>
                    <fullName>AVPN</fullName>
                </value>
                <value>
                    <fullName>Business Direct eBill</fullName>
                </value>
                <value>
                    <fullName>EPTT</fullName>
                </value>
                <value>
                    <fullName>Jasper</fullName>
                </value>
                <value>
                    <fullName>MIS</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>Network Services</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>Wireless</fullName>
                </value>
                <value>
                    <fullName>Wireless WAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SIM_Number__c</fullName>
        <label>SIM Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Internal_Ticket_Number__c</fullName>
        <description>Service Assurance</description>
        <label>SP Internal Ticket Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Technical_Contact_Email__c</fullName>
        <label>SP Technical Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SP_Technical_Contact_Name__c</fullName>
        <label>SP Technical Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Technical_Contact_Phone__c</fullName>
        <label>SP Technical Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Service_Address_City__c</fullName>
        <description>Service Assurance</description>
        <label>Service Address City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Address_Country_Other__c</fullName>
        <label>Service Address Country-Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Address_Country__c</fullName>
        <label>Service Address Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Address_State__c</fullName>
        <description>Service Assurance</description>
        <label>Service Address State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Address_Street__c</fullName>
        <description>Service Assurance</description>
        <label>Service Address Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Address_Zip__c</fullName>
        <description>Service Assurance</description>
        <label>Service Address Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>